--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /ProyectoSAGLAM-war/dist/
 /ProyectoSAGLAM-war/build/
 /ProyectoSAGLAM-ejb/dist/
+/ProyectoSAGLAM-war/nbproject/private/
+/nbproject/private/
